适配依赖包二进制安装

--- a/01-base.yml
+++ b/01-base.yml
@@ -3,6 +3,6 @@
   - kube-worker
   - new-worker
   roles:
-#  - prepare/nameserver
-#  - prepare/base
+  - prepare/nameserver
+  - prepare/base
   - chrony
