--- a/roles/plugins/cluster-storage/nfs/tasks/main.yml
+++ b/roles/plugins/cluster-storage/nfs/tasks/main.yml
@@ -31,7 +31,7 @@
       remote_src: yes
 
   - name: Install nfs-utils package | Debian
-    shell: "dpkg -i {{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_release }}_nfs/*.deb"
+    shell: "sudo dpkg -i {{ base_dir }}/packages/{{ ansible_distribution }}_{{ ansible_distribution_release }}_nfs/*.deb"
   when: ansible_distribution in [ 'Ubuntu','Debian' ]
 
 - block:
