--- a/hosts.ini
+++ b/hosts.ini
@@ -39,9 +39,11 @@ node1
 [all:vars]
 ;-------------------------------------- 初始化集群组件版本 ------------------------------------;
 ; kubernetes版本
-kube_version="v1.20.6"
+kube_version="v1.22.2"
 ; kubernetes升级版本
 kube_upgrade_version="v1.20.8"
+; pod-infra-container-image版本
+pause_version="3.5"
 ; etcd版本
 etcd_version="v3.4.14"
 ; docker版本
@@ -61,9 +63,9 @@ helm_v2_version="v2.17.0"
 ; helm v3 版本
 helm_v3_version="v3.6.0"
 ; nginx-ingress版本
-nginx_ingress_version="0.33.0"
+nginx_ingress_version="v1.0.3"
 ; traefik-ingress版本
-traefik_ingress_version="v2.4.8"
+traefik_ingress_version="v2.5.3"
 ; metrics-server版本
 metrics_server_version="v0.5.0"
 ; dns-cache版本
@@ -74,9 +76,9 @@ dns_cache_version="1.17.0"
 container_runtime="docker"
 ; 负载均衡器
 ; 有 internal  和 external 可选，默认使用 internal
-lb_mode="external"
+lb_mode="internal"
 ; 使用负载均衡后集群 apiserver ip，设置 lb_kube_apiserver_ip 变量，则启用 haproxy + keepalived
-lb_kube_apiserver_ip="172.16.10.232"
+; lb_kube_apiserver_ip="172.16.10.232"
 ; 使用负载均衡后集群 apiserver port 8443
 lb_kube_apiserver_port="8443"
 ; 集群内部dns域名
@@ -92,7 +94,7 @@ docker_subnet="172.17.0.1/16"
 ; node节点最大 pod 数
 kube_max_pods="110"
 ; 默认使用kube-proxy的 'iptables' 模式，可选 'ipvs' 模式
-kube_proxy_mode="iptables"
+kube_proxy_mode="ipvs"
 ; NodePort端口范围
 kube_service_node_port_range="30000-32767"
 ; NodePort 地址
@@ -119,9 +121,9 @@ calico_ipv4pool_ipip="Always"
 cilium_tunnel_mode="vxlan"
 cilium_native_routing_cidr="10.244.0.0/18"
 ; cni 指定网卡
-network_interface="ens192"
+network_interface=""
 ; 集群节点多网络环境指定 IP 网段信息
-network_cidr="10.0.1.0/24,10.0.2.0/24"
+network_cidr=""
 ; ingress-controller类型(nginx,traefik)
 ingress_controller_type="nginx"
 ; 离线仓库地址信息，提供 etcd kubernets network 等离线安装文件
@@ -133,7 +135,7 @@ yum_operate="replace"
 ; 分配给节点的 pod 子网掩码位，默认为 24 即 256 个ip
 kube_network_node_prefix="24"
 ; 时间同步服务器
-ntp_server="ntp1.aliyun.com"
+ntp_server="ntp1.aliyun.com,adfaadfas,safddsa"
 ; 是否开启 dns 缓存（"enable、disable"）
 enable_dns_cache="disable"
 ; master 是否可调度
