--- a/variables.yml
+++ b/variables.yml
@@ -9,73 +9,73 @@ npd_versioon: "v0.8.1"
 
 # ----------------------- 容器镜像地址 ---------------------
 # coredns
-coredns_image_name: "{{ dns_repository_hostname }}:{{ registry_port }}/coredns"
+coredns_image_name: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator"
 # dns-cache
-dns_cache_image: "{{ dns_repository_hostname }}:{{ registry_port }}/kubeoperator/k8s-dns-node-cache:{{ dns_cache_version }}"
+dns_cache_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/k8s-dns-node-cache:{{ dns_cache_version }}"
 # Pod image 地址
 pod_infra_container_image: "k8s.gcr.io/pause:{{ pause_version }}"
 # 基础容器 image 地址
-sandbox_image: "{{ dns_repository_hostname }}:{{ registry_port }}/kubeoperator/pause:{{ pause_version }}"
+sandbox_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/pause:{{ pause_version }}"
 # busybox_image image 地址
-busybox_image: "{{ dns_repository_hostname }}:{{ registry_port }}/kubeoperator/busybox:{{ busybox_version }}"
+busybox_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/busybox:{{ busybox_version }}"
 # calico 相关镜像
-calico_typha_image: "{{ dns_repository_hostname }}:{{ registry_port }}/calico/typha:{{ calico_version }}"
-calico_cni_image: "{{ dns_repository_hostname }}:{{ registry_port }}/calico/cni:{{ calico_version }}"
-calico_node_image: "{{ dns_repository_hostname }}:{{ registry_port }}/calico/node:{{ calico_version }}"
-calico_kube_controllers_image: "{{ dns_repository_hostname }}:{{ registry_port }}/calico/kube-controllers:{{ calico_version }}"
-calico_pod2daemon_flexvol_image: "{{ dns_repository_hostname }}:{{ registry_port }}/calico/pod2daemon-flexvol:{{ calico_version }}"
+calico_typha_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/typha:{{ calico_version }}"
+calico_cni_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/cni:{{ calico_version }}"
+calico_node_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/node:{{ calico_version }}"
+calico_kube_controllers_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/kube-controllers:{{ calico_version }}"
+calico_pod2daemon_flexvol_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/pod2daemon-flexvol:{{ calico_version }}"
 # calicoctl image 地址
-calicoctl_image: "{{ dns_repository_hostname }}:{{ registry_port }}/calico/ctl:{{ calico_version }}"
+calicoctl_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/ctl:{{ calico_version }}"
 # flannel image 地址
-flannel_image: "{{ dns_repository_hostname }}:{{ registry_port }}/coreos/flannel:{{ flannel_version }}"
+flannel_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/flannel:{{ flannel_version }}"
 # cilium image 地址
-cilium_image: "{{ dns_repository_hostname }}:{{ registry_port }}/cilium/cilium:{{ cilium_version }}"
-cilium_operator_image: "{{ dns_repository_hostname }}:{{ registry_port }}/cilium/operator-generic:{{ cilium_version }}"
+cilium_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/cilium:{{ cilium_version }}"
+cilium_operator_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/operator-generic:{{ cilium_version }}"
 # ingress-controller 镜像地址
-nginx_ingress_image: "{{ dns_repository_hostname }}:{{ registry_port }}/kubeoperator/ingress-nginx-controller:{{ nginx_ingress_version }}"
-traefik_ingress_image: "{{ dns_repository_hostname }}:{{ registry_port }}/traefik:{{ traefik_ingress_version }}"
+nginx_ingress_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/controller:{{ nginx_ingress_version }}"
+traefik_ingress_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/traefik:{{ traefik_ingress_version }}"
 # ceph-rbd provisioner
-rbd_provisioner_image: "{{ dns_repository_hostname }}:{{ registry_port }}/external_storage/rbd-provisioner:{{ rbd_provisioner_version }}"
+rbd_provisioner_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/rbd-provisioner:{{ rbd_provisioner_version }}"
 # nfs provisioner
-nfs_client_provisioner_image: "{{ dns_repository_hostname }}:{{ registry_port }}/kubeoperator/nfs-client-provisioner:{{ nfs_provisioner_version }}"
+nfs_client_provisioner_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/nfs-client-provisioner:{{ nfs_provisioner_version }}"
 # rook-ceph
-ceph_image: "{{ dns_repository_hostname }}:{{ registry_port }}/ceph/ceph:{{ ceph_version }}"
-rook_ceph_image: "{{ dns_repository_hostname }}:{{ registry_port }}/rook/ceph:{{ rook_ceph_version }}"
-rook_csi_ceph_image: "{{ dns_repository_hostname }}:{{ registry_port }}/cephcsi/cephcsi:{{ rook_csi_ceph_version }}"
-rook_csi_registrar_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/csi-node-driver-registrar:{{ rook_csi_node_driver_registrar_version }}"
-rook_csi_resizer_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/csi-resizer:{{ rook_csi_resizer_version }}"
-rook_csi_provisioner_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/csi-provisioner:{{ rook_csi_provisioner_version }}"
-rook_csi_snapshotter_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/csi-snapshotter:{{ rook_csi_snapshotter_version }}"
-rook_csi_attacher_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/csi-attacher:{{ rook_csi_attacher_version }}"
+ceph_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/ceph/ceph:{{ ceph_version }}"
+rook_ceph_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/rook/ceph:{{ rook_ceph_version }}"
+rook_csi_ceph_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/cephcsi/cephcsi:{{ rook_csi_ceph_version }}"
+rook_csi_registrar_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/csi-node-driver-registrar:{{ rook_csi_node_driver_registrar_version }}"
+rook_csi_resizer_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/csi-resizer:{{ rook_csi_resizer_version }}"
+rook_csi_provisioner_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/csi-provisioner:{{ rook_csi_provisioner_version }}"
+rook_csi_snapshotter_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/csi-snapshotter:{{ rook_csi_snapshotter_version }}"
+rook_csi_attacher_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/csi-attacher:{{ rook_csi_attacher_version }}"
 # metrics-server image
-metrics_server_image: "{{ dns_repository_hostname }}:{{ registry_port }}/kubeoperator/metrics-server:{{ metrics_server_version }}"
+metrics_server_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/metrics-server:{{ metrics_server_version }}"
 # npd image 地址
-npd_image: "{{ dns_repository_hostname }}:{{ registry_port }}/kubeoperator/node-problem-detector:{{ npd_versioon }}"
+npd_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/node-problem-detector:{{ npd_versioon }}"
 # helm2 tiller image
-tiller_image: "{{ dns_repository_hostname }}:{{ registry_port }}/kubeoperator/tiller:{{ helm_v2_version }}"
+tiller_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/tiller:{{ helm_v2_version }}"
 # huawei-csi
-huawei_csi_driver_image: "{{ dns_repository_hostname }}:{{ registry_port }}/kubeoperator/huawei-csi:{{ huawei_csi_driver_version }}"
-huawei_csi_provisioner_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/csi-provisioner:{{ huawei_csi_provisioner_version }}"
-huawei_csi_attacher_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/csi-attacher:{{ huawei_csi_attacher_version }}"
-huawei_csi_node_driver_registrar_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/csi-node-driver-registrar:{{ huawei_csi_node_driver_registrar_version }}"
+huawei_csi_driver_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/huawei-csi:{{ huawei_csi_driver_version }}"
+huawei_csi_provisioner_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/csi-provisioner:{{ huawei_csi_provisioner_version }}"
+huawei_csi_attacher_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/csi-attacher:{{ huawei_csi_attacher_version }}"
+huawei_csi_node_driver_registrar_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/csi-node-driver-registrar:{{ huawei_csi_node_driver_registrar_version }}"
 # vsphere-csi
-vsphere_csi_driver_image: "{{ dns_repository_hostname }}:{{ registry_port }}/kubeoperator/vsphere-csi-driver:{{ vsphere_csi_version }}"
-vsphere_csi_syncer_image: "{{ dns_repository_hostname }}:{{ registry_port }}/kubeoperator/vsphere-csi-syncer:{{ vsphere_csi_version }}"
-vsphere_csi_livenessprobe_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/livenessprobe:{{ vsphere_csi_livenessprobe_version }}"
-vsphere_csi_provisioner_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/csi-provisioner:{{ vsphere_csi_provisioner_version }}"
-vsphere_csi_attacher_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/csi-attacher:{{ vsphere_csi_attacher_version }}"
-vsphere_csi_node_driver_registrar_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/csi-node-driver-registrar:{{ vsphere_csi_node_driver_registrar_version }}"
+vsphere_csi_driver_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/vsphere-csi-driver:{{ vsphere_csi_version }}"
+vsphere_csi_syncer_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/vsphere-csi-syncer:{{ vsphere_csi_version }}"
+vsphere_csi_livenessprobe_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/livenessprobe:{{ vsphere_csi_livenessprobe_version }}"
+vsphere_csi_provisioner_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/csi-provisioner:{{ vsphere_csi_provisioner_version }}"
+vsphere_csi_attacher_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/csi-attacher:{{ vsphere_csi_attacher_version }}"
+vsphere_csi_node_driver_registrar_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/csi-node-driver-registrar:{{ vsphere_csi_node_driver_registrar_version }}"
 # cinder
-cinder_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scloudprovider/cinder-csi-plugin:{{ cinder_csi_version }}"
-cinder_csi_attacher_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/csi-attacher:{{ cinder_csi_attacher_version }}"
-cinder_csi_provisioner_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/csi-provisioner:{{ cinder_csi_provisioner_version }}"
-cinder_csi_snapshotter_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/csi-snapshotter:{{ cinder_csi_snapshotter_version }}"
-cinder_csi_resizer_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/csi-resizer:{{ cinder_csi_resizer_version }}"
-cinder_csi_livenessprobe_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/livenessprobe:{{ cinder_csi_livenessprobe_version }}"
-cinder_csi_registrar_image: "{{ dns_repository_hostname }}:{{ registry_port }}/k8scsi/csi-node-driver-registrar:{{ cinder_csi_node_driver_registrar_version }}"
+cinder_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scloudprovider/cinder-csi-plugin:{{ cinder_csi_version }}"
+cinder_csi_attacher_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/csi-attacher:{{ cinder_csi_attacher_version }}"
+cinder_csi_provisioner_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/csi-provisioner:{{ cinder_csi_provisioner_version }}"
+cinder_csi_snapshotter_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/csi-snapshotter:{{ cinder_csi_snapshotter_version }}"
+cinder_csi_resizer_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/csi-resizer:{{ cinder_csi_resizer_version }}"
+cinder_csi_livenessprobe_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/livenessprobe:{{ cinder_csi_livenessprobe_version }}"
+cinder_csi_registrar_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/k8scsi/csi-node-driver-registrar:{{ cinder_csi_node_driver_registrar_version }}"
 
 # nvidia gpu
-nvidia_k8s_device_plugin: "{{ dns_repository_hostname }}:{{ registry_port }}/nvidia/k8s-device-plugin:1.0.0-beta"
+nvidia_k8s_device_plugin: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/nvidia/k8s-device-plugin:1.0.0-beta"
 # ----------------------- 集群参数设置 ---------------------------
 pillar_local_dns: "169.254.20.10"
 # Etcd 数据根目录
@@ -141,8 +141,8 @@ govc_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ r
 huawei_csi_passwdencrypt_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/oceanstor/{{ architectures }}/passwdEncrypt"
 
 # ----------------------- helm 仓库地址 --------------------
-helm2_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/helm/{{ helm_v2_version }}/helm-{{ helm_v2_version }}-linux-{{ architectures }}.tar.gz"
-helm3_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/helm/{{ helm_v3_version }}/helm-{{ helm_v3_version }}-linux-{{ architectures }}.tar.gz"
+helm2_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/helm/{{ helm_v2_version }}/{{ architectures }}/helm-{{ helm_v2_version }}-linux-{{ architectures }}.tar.gz"
+helm3_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/helm/{{ helm_v3_version }}/{{ architectures }}/helm-{{ helm_v3_version }}-linux-{{ architectures }}.tar.gz"
 
 # ----------------------- chrony 下载地址 --------------------
 chrony_download_url: "{{ registry_protocol }}://{{ dns_repository_hostname }}:{{ repo_port }}/repository/oss-proxy/chrony/{{ architectures }}/chrony_xenial.tar.gz"
