--- a/roles/prepare/kubernetes/tasks/main.yml
+++ b/roles/prepare/kubernetes/tasks/main.yml
@@ -62,6 +62,8 @@
     - "{{ kube_controller_manager_download_url }}"
     - "{{ kube_apiserver_download_url }}"
     - "{{ kube_scheduler_download_url }}"
+    - "{{ kube_proxy_download_url }}"
+    - "{{ pause_download_url }}"
 
   - name: Docker | Load kube-master image
     shell: "{{ bin_dir }}/docker load -i {{ base_dir }}/k8s/{{ item }}"
@@ -69,6 +71,8 @@
     - kube-controller-manager.tar
     - kube-apiserver.tar
     - kube-scheduler.tar
+    - kube-proxy.tar
+    - pause.tar
     when: container_runtime == 'docker'
 
   - name: Containerd | Load kube-master image
@@ -77,6 +81,8 @@
     - kube-controller-manager.tar
     - kube-apiserver.tar
     - kube-scheduler.tar
+    - kube-proxy.tar
+    - pause.tar
     when: container_runtime == 'containerd'
   when: inventory_hostname in groups['kube-master']
 
