--- a/roles/post/tasks/main.yml
+++ b/roles/post/tasks/main.yml
@@ -65,7 +65,7 @@
     retries: 10
     delay: 6
 
-  - name: Ensure kube-operator namespace
-    shell: " {{ bin_dir }}/kubectl get namespaces | grep kube-operator || {{ bin_dir }}/kubectl create namespace kube-operator"
-  run_once: true
-  delegate_to: "{{ groups['kube-master'][0] }}"
+#  - name: Ensure kube-operator namespace
+#    shell: " {{ bin_dir }}/kubectl get namespaces | grep kube-operator || {{ bin_dir }}/kubectl create namespace kube-operator"
+#  run_once: true
+#  delegate_to: "{{ groups['kube-master'][0] }}"
