增加默认安装dashboard

--- a/15-post.yml
+++ b/15-post.yml
@@ -14,4 +14,9 @@
 - hosts: kube-master[0]
   gather_facts: false
   roles:
-  - { role: plugins/gpu/gpu-operator, when: "container_runtime == 'docker' and support_gpu == 'enable'" }
+  - { role: plugins/tools/dashboard }
+
+#- hosts: kube-master[0]
+#  gather_facts: false
+#  roles:
+#  - { role: plugins/gpu/gpu-operator, when: "container_runtime == 'docker' and support_gpu == 'enable'" }
