--- a/hosts.ip.ini
+++ b/hosts.ip.ini
@@ -65,6 +65,10 @@ traefik_ingress_version="v2.6.1"
 metrics_server_version="v0.5.0"
 ; dns-cache版本
 dns_cache_version="1.17.0"
+; kubernetes dashboard版本
+k8s_dashboard_version="v2.5.1"
+; dashboard-metrics-scraper版本
+metrics_scraper_version="v1.0.7"
 
 ;-------------------------------------- 集群基础信息配置 ------------------------------------;
 ; 容器运行时支持: docker, containerd
