--- a/roles/plugins/tools/dashboard/templates/dashboard.yaml.j2.yml
+++ b/roles/plugins/tools/dashboard/templates/dashboard.yaml.j2.yml
@@ -245,8 +245,10 @@ metadata:
   name: dashboard-metrics-scraper
   namespace: kubernetes-dashboard
 spec:
+  type: NodePort
   ports:
     - port: 8000
+      nodePort: 30003
       targetPort: 8000
   selector:
     k8s-app: dashboard-metrics-scraper
