--- a/roles/prepare/base/tasks/main.yml
+++ b/roles/prepare/base/tasks/main.yml
@@ -3,7 +3,7 @@
 
 # CentOS 系列|系统基础软件环境
 - include_tasks: centos.yml
-  when: ansible_distribution in [ 'CentOS','RedHat','EulerOS','Kylin Linux Advanced Server' ]
+  when: ansible_distribution in [ 'CentOS','RedHat','EulerOS','Kylin Linux Advanced Server','UniontechOS' ]
 
 # Debian 系列|系统基础软件环境
 - include_tasks: debian.yml
