--- a/roles/prepare/repository/tasks/main.yml
+++ b/roles/prepare/repository/tasks/main.yml
@@ -13,7 +13,7 @@
         file:
           path: /etc/yum.repos.d/*
           state: absent
-      when: ansible_distribution in [ 'CentOS','RedHat','EulerOS','Kylin Linux Advanced Server' ]
+      when: ansible_distribution in [ 'CentOS','RedHat','EulerOS','Kylin Linux Advanced Server','UniontechOS' ]
 
     - block:
       - name: Create repository backup directory
@@ -44,7 +44,7 @@
       path: "/etc/yum.conf"
       block: "sslverify=0"
       state: present
-    when: ansible_distribution in [ 'CentOS','RedHat','EulerOS','Kylin Linux Advanced Server' ]
+    when: ansible_distribution in [ 'CentOS','RedHat','EulerOS','Kylin Linux Advanced Server','UniontechOS' ]
 
   - block:
     - name: RedHat | Add amd64 offline repository
@@ -73,6 +73,20 @@
         dest: /etc/yum.repos.d/kubeops.repo
       when: architectures == 'arm64'
     when: ansible_distribution in [ 'EulerOS' ]
+
+  - block:
+    - name: UniontechOS | Add amd64 offline repository
+      template:
+        src: kubeops.repo.amd64-uos.j2
+        dest: /etc/yum.repos.d/kubeops.repo
+      when: architectures == 'amd64'
+
+    - name: UniontechOS | Add arm64 offline repository
+      template:
+        src: kubeops.repo.arm64-uos.j2
+        dest: /etc/yum.repos.d/kubeops.repo
+      when: architectures == 'arm64'
+    when: ansible_distribution in [ 'UniontechOS' ]
 
   - block:
     - name: Debian (amd64)| Add apt repository
