--- a/variables.yml
+++ b/variables.yml
@@ -51,7 +51,7 @@ rook_csi_attacher_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port 
 metrics_server_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/metrics-server:{{ metrics_server_version }}"
 # k8s dashboard 相关镜像
 k8s_dashboard_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/dashboard:{{ k8s_dashboard_version }}"
-metrics_scraper: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/metrics-scraper:{{ metrics_scraper_version }}"
+metrics_scraper_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/metrics-scraper:{{ metrics_scraper_version }}"
 # npd image 地址
 npd_image: "{{ dns_repository_hostname }}:{{ registry_hosted_port }}/kubeoperator/node-problem-detector:{{ npd_versioon }}"
 # helm2 tiller image
